--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -68,9 +68,11 @@
                                 <div class="message-center">
                                     <!-- Message -->
                                     <a href="#">
-                                        <div class="user-img"> <img src="assets/images/users/1.jpg" alt="user"
-                                                class="img-circle"> <span
-                                                class="profile-status online pull-right"></span> </div>
+                                        <div class="user-img">
+                                            <img src="assets/images/users/1.jpg" alt="user" class="img-50">
+                                            <span class="profile-status online pull-right">
+                                            </span>
+                                        </div>
                                         <div class="mail-contnet">
                                             <h5>Pavan kumar</h5> <span class="mail-desc">Just see the my admin!</span>
                                             <span class="time">9:30 AM</span>
@@ -78,8 +80,9 @@
                                     </a>
                                     <!-- Message -->
                                     <a href="#">
-                                        <div class="user-img"> <img src="assets/images/users/2.jpg" alt="user"
-                                                class="img-circle"> <span class="profile-status busy pull-right"></span>
+                                        <div class="user-img">
+                                            <img src="assets/images/users/2.jpg" alt="user" class="img-circle">
+                                            <span class="profile-status busy pull-right"></span>
                                         </div>
                                         <div class="mail-contnet">
                                             <h5>Sonu Nigam</h5> <span class="mail-desc">I've sung a song! See you
@@ -135,22 +138,25 @@
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><img src="assets/images/users/1.jpg" alt="user"
-                            class="profile-pic" /></a>
+                        aria-haspopup="true" aria-expanded="false"><img [src]="usuario.img | imagen" alt="user"
+                            class="profile-pic img-20 img-circle" /></a>
                     <div class="dropdown-menu dropdown-menu-right animated fadeIn">
                         <ul class="dropdown-user">
                             <li>
-                                <div class="dw-user-box">
-                                    <div class="u-img"><img src="assets/images/users/1.jpg" alt="user"></div>
+                                <div class="dw-user-box" align="center">
+                                    <div class="u-img"><img [src]="usuario.img | imagen" alt="user"></div>
                                     <div class="u-text">
-                                        <h4>Steave Jobs</h4>
-                                        <p class="text-muted">varun@gmail.com</p><a href="pages-profile.html"
-                                            class="btn btn-rounded btn-danger btn-sm">View Profile</a>
+                                        <h4> {{ usuario.nombre }}</h4>
+                                        <p class="text-muted">{{ usuario.email}}</p>
+                                        <a routerLink="/perfil" class="btn btn-rounded btn-danger btn-sm">
+                                            View Profile
+                                        </a>
                                     </div>
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#"><i class="ti-user"></i> My Profile</a></li>
+                            <li><a routerLink="/perfil"><i class="ti-user"></i> My Profile</a>
+                            </li>
                             <li><a href="#"><i class="ti-wallet"></i> My Balance</a></li>
                             <li><a href="#"><i class="ti-email"></i> Inbox</a></li>
                             <li role="separator" class="divider"></li>
