--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,41 @@
   cursor: pointer;
 }
 
+button {
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+
 .pointer {
   cursor: pointer;
+}
+
+.w50 {
+  width: 150px;
+}
+
+.w70 {
+  width: 70px;
+}
+.img-50 {
+  width: 50px;
+  height: 50px;
+}
+.img-20 {
+  width: 20px;
+  height: 25px;
+}
+
+.fondo_negro {
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+}
+
+.oculto {
+  display: none;
 }
