--- a/src/app/pages/hospitales/hospitales.component.html
+++ b/src/app/pages/hospitales/hospitales.component.html
@@ -3,8 +3,8 @@
         <div class="card">
             <div class="card-body">
 
-                <input #input (keyup)="buscarUsuario( input.value )" type="text" class="form-control"
-                    placeholder="Buscar Usuario">
+                <input #input (keyup)="buscarHospital( input.value )" type="text" class="form-control"
+                    placeholder="Buscar hospital">
 
             </div>
         </div>
@@ -27,43 +27,38 @@
     <div class="col-12">
         <div class="card">
             <div class="card-body">
-
+                <div class="text-right">
+                    <button (click)="crearHospital()" type="button"
+                        class="btn waves-effect waves-light btn-rounded btn-primary">
+                        <i class="fa fa-plus"></i>
+                        Crear Hospital
+                    </button>
+                </div>
                 <h3 class="card-title">Usuarios Registrados ( <small>{{ totalRegistros }}</small> )</h3>
                 <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>Imagen</th>
-                            <th>Correo</th>
                             <th>Nombre</th>
-                            <th>Role</th>
-                            <th>Auth</th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let usuario of usuarios">
+                        <tr *ngFor="let hospital of hospitales">
                             <td class="w70">
-                                <img (click)="mostrarModal( usuario._id)" [src]="usuario.img | imagen"
-                                    class="img-50 img-circle pointer">
-                            </td>
-                            <td>{{ usuario.email }}</td>
-                            <td>{{ usuario.nombre }}</td>
-                            <td>
-                                <select [(ngModel)]="usuario.role" name="role" class="form-control">
-                                    <option value="ADMIN_ROLE">ADMIN_ROLE</option>
-                                    <option value="USER_ROLE">USER_ROLE</option>
-                                </select>
+                                <img (click)="mostrarModal( hospital._id)" [src]="hospital.img | imagen:'hospital'"
+                                    class="img-50 pointer">
                             </td>
                             <td>
-                                <label *ngIf="usuario.google" class="label label-danger">Google</label>
-                                <label *ngIf="!usuario.google" class="label label-info">Normal</label>
+                                <input type="text" name="nombre" [(ngModel)]="hospital.nombre" class="form-control"
+                                    placeholder="Nombre de hospital" />
                             </td>
                             <td>
-                                <button (click)="guardarUsuario( usuario )" type="button" class="btn btn-primary">
+                                <button (click)="guardarHospital( hospital )" type="button" class="btn btn-primary">
                                     <i class="fa fa-save"></i>
                                 </button>
 
-                                <button (click)="borrarUsuario( usuario )" type="button" class="btn btn-danger">
+                                <button (click)="borrarHospital( hospital )" type="button" class="btn btn-danger">
                                     <i class="fa fa-trash-o"></i>
                                 </button>
                             </td>
