--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -3,8 +3,8 @@
         <div class="card">
             <div class="card-body">
 
-                <input #input (keyup)="buscarUsuario( input.value )" type="text" class="form-control"
-                    placeholder="Buscar Usuario">
+                <input #input (keyup)="buscarMedico( input.value )" type="text" class="form-control"
+                    placeholder="Buscar medico...">
 
             </div>
         </div>
@@ -28,42 +28,40 @@
         <div class="card">
             <div class="card-body">
 
-                <h3 class="card-title">Usuarios Registrados ( <small>{{ totalRegistros }}</small> )</h3>
+                <div class="text-right">
+                    <button [routerLink]="['/medico','nuevo']" type="button"
+                        class="btn waves-effect waves-light btn-rounded btn-primary">
+                        <i class="fa fa-plus"></i>
+                        Crear Médico
+                    </button>
+                </div>
+                <h3 class="card-title">Medicos Registrados ( <small>{{ _medicosServices.totalMedico }}</small> )</h3>
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th>Imagen</th>
-                            <th>Correo</th>
-                            <th>Nombre</th>
-                            <th>Role</th>
-                            <th>Auth</th>
+                            <th>Foto</th>
+                            <th>Medico</th>
+                            <th>Hospital</th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let usuario of usuarios">
+                        <tr *ngFor="let medico of medicos">
                             <td class="w70">
-                                <img (click)="mostrarModal( usuario._id)" [src]="usuario.img | imagen"
-                                    class="img-50 img-circle pointer">
-                            </td>
-                            <td>{{ usuario.email }}</td>
-                            <td>{{ usuario.nombre }}</td>
-                            <td>
-                                <select [(ngModel)]="usuario.role" name="role" class="form-control">
-                                    <option value="ADMIN_ROLE">ADMIN_ROLE</option>
-                                    <option value="USER_ROLE">USER_ROLE</option>
-                                </select>
+                                <img [src]="medico.img | imagen:'hospital'" class="img-50 pointer">
                             </td>
                             <td>
-                                <label *ngIf="usuario.google" class="label label-danger">Google</label>
-                                <label *ngIf="!usuario.google" class="label label-info">Normal</label>
+                                {{ medico.nombre}}
                             </td>
                             <td>
-                                <button (click)="guardarUsuario( usuario )" type="button" class="btn btn-primary">
-                                    <i class="fa fa-save"></i>
+                                {{ medico.hospital['nombre']}}
+                            </td>
+                            <td>
+                                <button [routerLink]="['/medico', medico._id]" type="button" class="btn btn-primary">
+                                    <i class="fa fa-edit"></i>
                                 </button>
 
-                                <button (click)="borrarUsuario( usuario )" type="button" class="btn btn-danger">
+                                <button (click)="borrarMedico( medico )" type="button" class="btn btn-danger">
                                     <i class="fa fa-trash-o"></i>
                                 </button>
                             </td>
@@ -77,6 +75,7 @@
                 <button (click)="cambiarDesde(5)" type="button" class="btn btn-secondary">
                     Siguientes
                 </button>
+
             </div>
         </div>
     </div>
